# gene-tidy

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: BIOTOOLS_DRAFT.md  DISCOVERY.md  LAUNCH_ASSETS.md  RELEASE.md  demo.gif.PLACEHOLDER.md  demo_input.csv  demo_storyboard.md
notebooks/: gene_tidy_colab.ipynb
src/gene_tidy/: __init__.py  cli.py  columns.py  detect.py  excel_fix.py  hgnc.py  io.py  pipeline.py  resolver.py
src/gene_tidy/data/: hgnc_version.json
src/gene_tidy/examples/: __init__.py  messy_example.xlsx
tests/: conftest.py  test_cli.py  test_columns.py  test_data_boundary.py  test_detect.py  test_excel_fix.py  test_golden.py  test_io.py  test_paths_and_packaging.py  test_resolver.py
tests/fixtures/: hgnc_subset.tsv
tools/: build_hgnc_data.py
