[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gene-tidy"
version = "0.1.1"
description = "No-code cleaning of messy gene/protein identifier tables, fully offline, with explicit ambiguity handling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gene-tidy contributors" }]
keywords = [
    "bioinformatics",
    "genomics",
    "HGNC",
    "gene symbols",
    "identifier mapping",
    "data cleaning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.5",
    "openpyxl>=3.0",
    "typer>=0.9",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "build>=1.0", "twine>=4.0"]

[project.urls]
Homepage = "https://github.com/MargoSolo/gene-tidy"
Issues = "https://github.com/MargoSolo/gene-tidy/issues"

[project.scripts]
gene-tidy = "gene_tidy.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gene_tidy = ["data/*.tsv.gz", "data/*.json", "examples/*.xlsx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
